primeiras tags relacionadas a semântica

--- a/primeiro.html
+++ b/primeiro.html
@@ -1,2 +1,28 @@
 <!DOCTYPE html>
-<h1>Primeiro html</h1>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Dhomyny</title>
+    </head>
+    <body>
+        <header>
+            <h1>Dhomyny</h1>
+        </header>
+        <section>
+            <header>
+                <h2>
+                    Posts
+                </h2>
+            </header>
+            <article>
+                <header>
+                    <h3>
+                        post#1
+                    </h3>
+                    <p>Lorem ipsum dolor sit amet, <a href="https://www.google.com/search?channel=fs&client=ubuntu-sn&q=leo+lins" target="_blank" rel="noopener noreferrer" >consectetur adipiscing elit.</a> Curabitur non malesuada eros. Pellentesque gravida sapien nisl, <a href="mailto:dhomyryan@outlook.com">quis posuere diam ultrices nec</a>. Ut a condimentum turpis. Etiam suscipit malesuada mauris, sit amet congue <a href="tel:+55 (84) 981477291">risus</a> bibendum sit amet. Etiam interdum lacinia lorem non scelerisque. Aliquam sagittis eu tortor eget dapibus. Aenean vitae purus scelerisque, dapibus est non, aliquet nunc. Integer condimentum lacinia ante, non tempus arcu tincidunt at. Duis varius ullamcorper enim, id congue erat commodo et. Duis lobortis bibendum urna ac pulvinar. Proin placerat sit amet quam vitae sodales. Duis in sem tortor. Pellentesque sagittis mauris at ligula vulputate, sed maximus metus convallis. Cras pharetra nibh id dui fringilla, at sagittis ante mattis. </p>
+                </header>
+            </article>
+        </section>
+        <footer></footer>
+    </body>
+</html>
